--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -15,6 +15,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MarvelApp"
         tools:targetApi="31">
+        <activity android:name=".screens.inspectCharacter.InspecCharacterActivity"
+            android:exported="false" />
         <activity
             android:name=".screens.characters.MainActivity"
             android:exported="true">
